[WIP] APIレスポンスJSON内容変更
resultCode廃止、errorオブジェクト追加
